--- a/static/style.css
+++ b/static/style.css
@@ -16,32 +16,25 @@ body {
 }
 
 #panel {
-  height: 100%;
-  flex-basis: 0;
-  flex-grow: 0;
+  max-width: 350px;
+  height: auto;
+  flex-grow: 1;
+  padding: 10px;
   overflow: auto;
   transition: all 0.2s ease-out;
+  box-shadow: 0 2px 6px rgba(0,0,0, 0.3);
 }
 
 #panel.open {
   flex-basis: auto;
 }
 
-#panel .place {
-  font-family: "open sans", arial, sans-serif;
-  font-size: 1.2em;
-  font-weight: 500;
-  margin-block-end: 0px;
-  padding-left: 18px;
-  padding-right: 18px;
-}
-
-#panel .distanceText {
-  color: silver;
+#panel .place, #panel .distanceText {
   font-family: "open sans", arial, sans-serif;
   font-size: 1em;
-  font-weight: 400;
-  margin-block-start: 0.25em;
+  margin: 5px 0;
+  font-weight: 500;
+  margin-block-end: 0px;
   padding-left: 18px;
   padding-right: 18px;
 }
@@ -106,4 +99,19 @@ body {
 .station-row:hover {
   cursor: pointer;
   background-color: #f0f0f0; /* light grey background on hover for indication */
+}
+
+.custom-map-control-button {
+  background-color: #4285F4; /* Google blue */
+  color: white;
+  border: none;
+  border-radius: 4px;
+  padding: 10px 15px;
+  margin: 10px;
+  font-size: 14px;
+  cursor: pointer;
+}
+
+.custom-map-control-button:hover {
+  background-color: #357ae8; /* Darker blue on hover */
 }
