--- a/static/style.css
+++ b/static/style.css
@@ -28,12 +28,15 @@ body {
   top: 10px;
   left: 10px;
   padding: 10px;
+    box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  outline: none;
   */
-  z-index: 10;
   background-color: #fff;
   border-radius: 5px;
   box-shadow: 0 2px 6px rgba(0, 0, 0, 0.3);
   max-width: 350px;
+
 }
 
 #panel.open {
