flexed the page layout

--- a/static/style.css
+++ b/static/style.css
@@ -13,44 +13,72 @@ html, body {
   background-color: var(--background-color);
   color: var(--text-color);
   font-family: 'Open Sans', sans-serif;
-}
-
-#app-title, #pac-card {
-  background-color: var(--secondary-color);
-  padding: 5px;
-  border-radius: 2px;
-  border: 2px solid #ccc;
-  display: block;
-  position: absolute;
-  z-index: 100;
+  display: flex;
+  flex-direction: column;
 }
 
 #app-title {
   display: flex;
-  justify-content: space-between; 
+  justify-content: space-between;
   align-items: center;
-  position: fixed;
-  z-index: 100;
-  top: 0;
-  left: 0;
-  right: 0;
   background-color: var(--secondary-color);
   padding: 2px 5px;
   border-bottom: 2px solid #ccc;
 }
 
-#app-title h1 {
-  font-size: 1.5em; /* Smaller font size for the title, adjust as needed */
-  margin: 0; /* Remove any default margin */
+#page-container {
+  flex-grow: 1;
+  display: flex;
+  overflow: hidden;
 }
 
-/* Positioning of pac-card */
+#map {
+  flex-grow: 1;
+  margin: 10px;
+}
+
+#side-container {
+  display: flex;
+  flex-direction: column;
+  background-image: linear-gradient(30deg, #fff, aliceblue);
+  overflow: hidden;
+}
+
 #pac-card {
   box-shadow: 0 2px 6px rgba(0, 0, 0, 0.3);
   max-width: 350px;
   min-width: 280px;
-  top: 110px;
-  right: 0px;
+  background-color: #fff;
+  border-radius: 4px;
+  border: 2px solid #ccc;
+  padding: 5px;
+  margin-bottom: 10px; 
+}
+
+#pac-title {
+  margin-bottom: 10px;
+  text-align: center;
+  background-color: var(--secondary-color); 
+  padding: 5px;
+  border-radius: 2px;
+}
+
+#pac-container {
+  display: flex;
+  justify-content: space-between; /* Align items horizontally */
+  align-items: center; /* Align items vertically */
+}
+
+#pac-input {
+  flex-grow: 1; /* Allow input to take available space */
+  margin-right: 10px; /* Space between input and button */
+  padding: 5px 10px; /* Padding inside the input field */
+  border: 1px solid #ccc; /* Border for input field */
+  border-radius: 4px; /* Rounded corners for input field */
+}
+
+.custom-map-control-button {
+  padding: 5px 10px; /* Consistent padding with input field */
 }
 
 /* About Button */
@@ -93,56 +121,6 @@ html, body {
   color: black;
   text-decoration: none;
   cursor: pointer;
-}
-
-/* Styling for buttons */:root {
-  --primary-color: #7a43b6; 
-  --secondary-color: #acbcc9; 
-  --background-color: #fff; 
-  --text-color: #333; 
-  --title-color: #222;
-}
-
-html, body {
-  height: 100%;
-  margin: 0;
-  padding: 0;
-  background-color: var(--background-color);
-  color: var(--text-color);
-  font-family: 'Open Sans', sans-serif;
-}
-
-#app-title, #pac-card {
-  background-color: var(--secondary-color);
-  padding: 10px;
-  border-radius: 4px;
-  border: 5px solid #ccc;
-  display: block;
-  position: absolute;
-  z-index: 100;
-}
-
-#app-title {
-  display: flex;
-  justify-content: space-between; /* Positions children at start and end */
-  align-items: center;
-  position: fixed;
-  z-index: 100;
-  top: 0;
-  left: 0;
-  right: 0;
-  background-color: var(--secondary-color);
-  padding: 5px;
-  border-bottom: 2px solid #ccc;
-}
-
-/* Positioning of pac-card */
-#pac-card {
-  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.3);
-  max-width: 350px;
-  min-width: 280px;
-  top: 100px;
-  right: 0px;
 }
 
 /* Styling for buttons */
@@ -196,21 +174,27 @@ h2, .panel-title, #pac-title {
   padding-right: 18px;
 }
 
-/* Layout and Spacing */
-#page-container {
-  display: grid;
-  grid-template-columns: auto 0; /*sets width of child items: map and side-container; side-container starts at 0*/
-  overflow: hidden;
+#panel {
+  overflow: auto;
+  transition: all 0.2s ease-out;
+  flex-grow: 1; 
 }
 
-#map, #side-container {
-  margin: 10px;
-}
+/* Panel Row Styles */
+.station-row {
+  border-bottom: 1px solid #e0e0e0; /* Light grey border */
+  padding: 10px;
+  margin-bottom: 3px; /* Space between rows */
+  background-color: #fff;
+  cursor: pointer;
 
-#map {
-  display: flex;
-  height: 100vh;
-  position: relative;
+  &:last-child {
+    border-bottom: none; /* Remove border for the last row */
+  }
+
+  &:hover {
+    background-color: #dadada; /* light grey background on hover for indication */
+  }
 }
 
 #side-container {
@@ -245,111 +229,13 @@ h2, .panel-title, #pac-title {
 
 /* Responsive Design */
 @media screen and (max-width: 600px) {
-  #pac-card, #panel, #side-container {
-    width: 100%;
-    max-width: none;
+  #page-container {
+    flex-direction: column; /* Stack map and side-container vertically on small screens */
   }
 
-  #panel {
-    max-height: 50vh; /* Adjust for smaller screens */
-  }
-}
-.custom-map-control-button, #about-button {
-  background-color: var(--primary-color);
-  border: none;
-  border-radius: 4px;
-  padding: 5px;
-  margin: 10px;
-  font-size: 14px;
-  cursor: pointer;
-}
-
-.custom-map-control-button:hover, #about-button:hover {
-  background-color: #5a2d8c; 
-}
-
-/* Typography */
-h2, .panel-title, #pac-title {
-  font-family: 'Open Sans', sans-serif;
-  color: var(--title-color);
-  font-size: 18px;
-  font-weight: 400;
-  padding: 6px 12px;
-}
-
-/* Style for the place name */
-.panel-row .place {
-  font-family: 'Open Sans', arial, sans-serif;
-  font-size: 0.9em; /* Maintain current size */
-  font-weight: bold; /* Make text bold */
-  margin: 5px 0;
-  padding-left: 18px;
-  padding-right: 18px;
-}
-
-/* Style for the distance text */
-.panel-row .distanceText {
-  font-family: 'Open Sans', arial, sans-serif;
-  font-size: 0.8em; /* Slightly smaller font size */
-  font-weight: normal; /* Normal weight for distance text */
-  color: rgb(151, 151, 151); /* Maintain current color */
-  margin: 5px 0;
-  padding-left: 18px;
-  padding-right: 18px;
-}
-
-/* Layout and Spacing */
-#page-container {
-  display: grid;
-  grid-template-columns: auto 0; /*sets width of child items: map and side-container; side-container starts at 0*/
-  overflow: hidden;
-}
-
-#map, #side-container {
-  margin: 10px;
-}
-
-#map {
-  display: flex;
-  height: 100vh;
-  position: relative;
-}
-
-#side-container {
-  display: grid;
-  height: 100vh;
-  grid-template-rows: auto auto; /*sets height of child items: pac-card and panel*/
-  background-image: linear-gradient(30deg, #fff, aliceblue);
-  overflow: hidden;
-}
-
-#panel {
-  overflow: auto;
-  transition: all 0.2s ease-out;
-}
-
-/* Panel Row Styles */
-.station-row {
-  border-bottom: 1px solid #e0e0e0; /* Light grey border */
-  padding: 10px;
-  margin-bottom: 3px; /* Space between rows */
-  background-color: #fff;
-  cursor: pointer;
-
-  &:last-child {
-    border-bottom: none; /* Remove border for the last row */
-  }
-
-  &:hover {
-    background-color: #dadada; /* light grey background on hover for indication */
-  }
-}
-
-/* Responsive Design */
-@media screen and (max-width: 600px) {
-  #pac-card, #panel, #side-container {
-    width: 100%;
-    max-width: none;
+  #map, #side-container {
+    width: 100%; /* Full width for small screens */
+    margin: 0; /* Adjust margin as needed */
   }
 
   #panel {
