--- a/static/style.css
+++ b/static/style.css
@@ -189,6 +189,8 @@ h2, .panel-title, #pac-title {
   overflow: auto;
   transition: all 0.2s ease-out;
   flex-grow: 1; 
+  max-width: 350px; 
+  min-width: 280px;
 }
 
 /* Panel Row Styles */
